--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>pagina-lista</title>
 <link rel="stylesheet" href="static/css/style.css">
+<link rel="stylesheet" href="static/css/index.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -10,15 +11,15 @@
         <div class="container">
           <div class="row">
             <div class="col-9">
-              <div class="pageTitle">
-                TEST
+              <div class="pageTitle merriweather-regular">
+                A Brand <b>  New  </b>Identity
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col-12">
               <div class="pageSubTitle">
-                TEST
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
               </div>
             </div>
           </div>
