Lezione in classe sulla lista

--- a/index.html
+++ b/index.html
@@ -30,8 +30,37 @@
               </a>
             </div>
           </div>
+          </div>
         </div>
       </div>
+      <div class="container">
+      <div class="customList col-12">
+        <ol class="merriweather-regular">
+          <li class="listItem">
+            <div class="listItemContent merriweather-regular">
+              <p class="listText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo molestias dolor, soluta voluptate reiciendis, hic labore aliquid laboriosam repellendus, ex repellat vitae quas. Non nulla natus eveniet laboriosam eius dolorem!</p>
+              <a href="#" class="customLink">Go to details</a>
+            </div>
+          </li>
+          <li class="listItem">
+            <div class="listItemContent">
+            <p class="listText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo molestias dolor, soluta voluptate reiciendis, hic labore aliquid laboriosam repellendus, ex repellat vitae quas. Non nulla natus eveniet laboriosam eius dolorem!</p>
+            <a href="#" class="customLink">Go to details</a>
+          </li>
+          <li class="listItem" >
+            <div class="listItemContent">
+            <p class="listText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo molestias dolor, soluta voluptate reiciendis, hic labore aliquid laboriosam repellendus, ex repellat vitae quas. Non nulla natus eveniet laboriosam eius dolorem!</p>
+            <a href="#" class="customLink">Go to details</a>
+          </li>
+          <li class="listItem">
+            <div class="listItemContent">
+            <p class="listText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo molestias dolor, soluta voluptate reiciendis, hic labore aliquid laboriosam repellendus, ex repellat vitae quas. Non nulla natus eveniet laboriosam eius dolorem!</p>
+            <a href="#" class="customLink">Go to details</a>
+          </li>
+        </ol>
+        </div>
+      </div>
+
 
 
 
