--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
         </ol>
         </div>
       </div>
+      <div class="variant-two">
+        <div class="container">
+          <div class="col-3">
+            <div class="PageFooter merriweather-regular">
+              <p>© 2021  - MED Company</p>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
 
 
 
